# miniwip

./: .gitignore  Cargo.toml  LICENSE
src/: app.rs  main.rs  tui.rs
