[package]
name = "minircom"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.3", features = ["derive", "cargo"] }
crossterm = { version = "0.26.1", features = ["event-stream"] }
futures = { version = "0.3" }
# tokio = { version = "1.28.2", features = ["full" ] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "time", "io-util", "signal" ] }
tokio-serial = { version = "5.4.1" }
time = { version = "0.3.22", features=["macros", "formatting"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
ratatui = "0.26.1"